--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <div class="container">
         <h2 style="color: #58a6ff; margin-bottom: 15px;">MATCH MANAS LIVE</h2>
         <video id="video" controls autoplay></video>
-        
+     
+      <div class="btn-box">   
         <a href="https://t.me/MKSsports_3" class="btn-yt">📺 Subscribe My YouTube Channel</a>
-<a href="https://t.me/MKSsports_3" class="btn tg">🚀 Join Telegram</a>
-    </div>
+        <a href="https://t.me/MKSsports_3" class="btn tg">🚀 Join Telegram</a>
+   
+      </div>
     <script>
         var video = document.getElementById('video');
         // Aapka live match link
