--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Match Manas Live</title>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <style>
-        body { background: #0b0e14; color: yellow; font-family: sans-serif; text-align: center; margin: 0; padding: 10px; }
+        body { background: #0b0e14; color: black; font-family: sans-serif; text-align: center; margin: 0; padding: 10px; }
         .container { max-width: 600px; margin: auto; background: #161b22; padding: 15px; border-radius: 12px; border: 1px solid #30363d; }
         video { width: 100%; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.5); background: black; margin-bottom: 15px; }
         .btn-box { display: flex; flex-direction: column; gap: 10px; margin-top: 15px; }
