--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         // ==========================================
         // 🔥 LINK CONFIGURATION 🔥
         // ==========================================
-        const streamLink = "https://www.youtube.com/live/GLlHqWwWMms?si=feAM_NfBI9q2_40n";
+        const streamLink = "https://allrounderlive.pages.dev/player?url=https://dillzyserver.dillzycreations.workers.dev/live/king.m3u8";
         // ==========================================
 
         // 🔥 FAKE VIEWS LOGIC (1000 - 15000) 🔥
