--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <script>
         // --- 1. CONFIGURATION ---
-        const streamLink = "https://aps12.playlist.live-video.net/v1/playlist/CrgFR9zhJ8QlWdOScArRbnE7use3PywOXilJ79BYrt7-N_-qtluKbZ_G-86qabup4VUAR2bHBixUVvK7q2WMc9RBTWhkkttJ5-0jBJveox5RXC0-bWaaUb9bq7ekVntUarBZk8QbfQZz9orniIpsuCG0Z0Dxf9SHHBEkIPAyTD5DGNJhCet_Xrhmh49tBM8M7jCQcu-j4VknSB3vZJrJusRSmmAnqVIU4PzwlukZpk5WdqUdjMe354PExdblKLUwiNwmQtvSMaoa-aNnr5SqZDcRih7wcizEZBHAulitKt4_6K9ER6Ey3Qc_8YBIBhn6pteksK-3NJ4EBZuTZgXWDiUDNu2wSgK2IbD2bUH9Og_nO92P0UWpsC9O-W2F0NT2pM6BduMAiMEzE2tz4lDaJGGHV67rX_KZlb2hMeIIK59WX9-tqEwY1dJHt6uRWfistVdc614-YeR3ruK-M09awVir_OL6ynQrvmGzbrbNV6EBHfI0Lv8dq8bk_INOPRuHkQ3VuXD0Cl-n-GDssgmoFhIlywOWtUMPKF-gO-AisY0YVPUgc6XXcRxGyG6KedPra8FA8zk3_Q1WHXW_1GyeJSk4zhHIP__XVS6SBbnDRHloLrui1i3WhRMYrowYn0juT_Hye2E6NaYcxzaZal6YyDPh8iGMvhRh-e9PL804D91rVjn6fjqDrNZvuxFkdQ71w0o4hvl8ALC0iIsnXIQCYI8kITFVo9jjHkWuf0D4OQ3IdnnZ7dMXog1hiF_zY_9Cjp8JmCttIjIyvfbloITfIoSICJapiyMuYFwCA_nc71uQPud66mEVrqYolvc0POOKdkFnJ8IvmzTS8bJLr6TgNytUgvJk7rZ8HxGM_p1-hPJMe0QcIqQcPY1i1IBbSK_kMtY3JanJmOr5gVrMAKPEAEi6IcMb_xPCTxu1GgxG7whJgXQI88YIBy8gASoJdXMtd2VzdC0yMJoO.m3u8";
+        const streamLink = "https://allrounderlive.pages.dev/player2?url=https://dillzyserver.dillzycreations.workers.dev/live/abc123.m3u8";
 
         // --- 2. VIEW COUNTER ---
         function updateViewers() {
