--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <script>
         // --- 1. CONFIGURATION ---
-        const streamLink = "https://allrounderlive.pages.dev/player2?url=https://dillzyserver.dillzycreations.workers.dev/live/abc123.m3u8";
+        const streamLink = "https://jan.player0003.com/hls/star2eng.m3u8?md6=-lpdEzzUysdx2T5Bx56mAw&expires=1768673897&s=MmEwMjo2ZWEwOmRhMDg6MzAyOTo6MTI=";
 
         // --- 2. VIEW COUNTER ---
         function updateViewers() {
