--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>MKS Sports Live</title>
     
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     
     <style>
@@ -20,7 +19,7 @@
             overflow-x: hidden; min-height: 100vh; display: flex; flex-direction: column; 
         }
 
-        /* 1. Header (Standard Size) */
+        /* 1. Header */
         .header {
             display: flex; justify-content: space-between; align-items: center;
             background: #111; padding: 12px 15px; border-bottom: 2px solid var(--primary); 
@@ -44,19 +43,7 @@
         .news-ticker { background: var(--primary); color: white; font-size: 12px; font-weight: 700; padding: 8px 0; white-space: nowrap; overflow: hidden; border-bottom: 1px solid #333; }
         .ticker-content { display: inline-block; padding-left: 100%; animation: marquee 20s linear infinite; }
 
-        /* 4. Reaction Section (Separate) */
-        .reaction-bar {
-            background: #111; padding: 15px; display: flex; justify-content: center; gap: 25px;
-            border-bottom: 1px solid #222;
-        }
-        .react-btn {
-            width: 45px; height: 45px; font-size: 22px; background: #222; border: 1px solid #333;
-            border-radius: 50%; display: flex; align-items: center; justify-content: center; 
-            cursor: pointer; transition: transform 0.1s; box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-        }
-        .react-btn:active { transform: scale(0.9); border-color: var(--primary); }
-
-        /* 🔥 5. NEW SERVER STACK (Vertical) 🔥 */
+        /* 4. SERVER LIST (Vertical Stack) */
         .server-section {
             padding: 15px; display: flex; flex-direction: column; gap: 10px;
             background: #0a0a0a; border-bottom: 1px solid #222;
@@ -82,7 +69,7 @@
         .status-dot { width: 8px; height: 8px; background: #444; border-radius: 50%; }
         .server-btn-large.active .status-dot { background: #0f0; box-shadow: 0 0 5px #0f0; }
 
-        /* 6. Scoreboard (Standard Size) */
+        /* 5. Scoreboard */
         .match-card {
             margin: 15px; background: linear-gradient(135deg, #1a1a1a 0%, #050505 100%);
             border-radius: 12px; padding: 15px; display: flex; justify-content: space-between; align-items: center;
@@ -93,7 +80,7 @@
         .t-name { font-weight: 800; font-size: 14px; color: #fff; letter-spacing: 0.5px; }
         .vs-box { background: var(--primary); padding: 5px 15px; transform: skew(-10deg); font-size: 14px; font-weight: 900; color:white; border-radius: 4px; }
 
-        /* 7. Action Buttons (Big & Stacked) */
+        /* 6. Buttons */
         .action-area { padding: 0 15px 30px 15px; display: flex; flex-direction: column; gap: 12px; }
         .big-btn { 
             display: flex; align-items: center; justify-content: center; gap: 10px; 
@@ -107,8 +94,6 @@
         .big-btn i { font-size: 18px; }
 
         @keyframes marquee { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
-        .floating-emoji { position: fixed; bottom: 30%; right: 20px; font-size: 30px; animation: floatUp 2s ease-out forwards; pointer-events: none; z-index: 100; }
-        @keyframes floatUp { 0% { transform: translateY(0); opacity: 1; } 100% { transform: translateY(-150px); opacity: 0; } }
     </style>
 </head>
 <body>
@@ -130,12 +115,6 @@
         <div class="ticker-content">
             📢 WELCOME TO MKS SPORTS LIVE • JOIN TELEGRAM FOR FAST UPDATES • SHARE WITH FRIENDS TO SUPPORT US! 📢
         </div>
-    </div>
-
-    <div class="reaction-bar">
-        <div class="react-btn" onclick="triggerReaction('❤️')">❤️</div>
-        <div class="react-btn" onclick="triggerReaction('🔥')">🔥</div>
-        <div class="react-btn" onclick="triggerCelebration()">🎉</div>
     </div>
 
     <div class="server-section">
@@ -232,13 +211,7 @@
         }
         setInterval(updateViewers, 5000);
         updateViewers();
-
-        function triggerCelebration() { confetti({ particleCount: 100, spread: 70, origin: { y: 0.6 } }); triggerReaction('🎉'); }
-        function triggerReaction(emoji) {
-            const el = document.createElement('div'); el.innerText = emoji; el.className = 'floating-emoji';
-            el.style.right = (Math.floor(Math.random() * 50) + 10) + 'px';
-            document.body.appendChild(el); setTimeout(() => el.remove(), 2000);
-        }
     </script>
 </body>
 </html>
+
