--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <script>
         // 🔥 LINKS UPDATE KAREIN 🔥
         const server1 = "https://use12.playlist.live-video.net/v1/playlist/CrgFHJM5LP7PDOilQ_sQlV4HqpXkndbeY2w-WWj1RxOeflN2RfJMh-QQkthiYuW1AVUoNlFV5tgI3C8aX9iKpfiQwZvKK-DyzM__3TPoG9tu_bvfF5owtERVRT7u6dGjKtyDGwtMGPEZ6ouDpX__2FyWuLx6OR7xEmv_XxqoohTO4WZ0qyCbBpvoDCZeUG5Xktpo6_cO-7s1AGamfTrX3oBmJ2rYNZABXFeDBOnlzu7VWdyhNX5QIuGRMdWps9d7RlaZ6oA9BJoV57n5lUIQTE0eqlueHBB9uW9Yq5X3O5UzcoC6uTvnThJGfFsTiJVFbbyj_BM_Y6QJjP1ZlDWeYYPFJhnAcL4DObngf8hZSx3zlZSzmJy6sOFdQFmf4tkwZdnPWKALCZsA3MouIKc__yO4QpZ8HgyrBF6OVNpYzfyamiuYkNlFymPj8Ti-Hj9044xDS_wkfxfJ9Tqj-mO5q5i8iAZxmWz4ooPx6pgKL-jUCwnb84914hu-qOwZNcK1Vdr3kKg-6c-yno-r51DwRzYO7O1Dei7OVBObbqOYY8WaW4ToEVwMOOJ_7fn1bShPFBsQTAolvDoz8sEz7x55r9w2ipYVa5uGKACnn4UILtS1fh_ML9Z4oTKQD_mY7SyBqOrw7SyGbOEwko0l8kI7lmF-sp9eDABQ2ejvHjjtP6q7znsi_68FXORRLM_8hO9xT2SROSzEdRG5hkRkaXXv4l-kS4YKgYtKQNCqeJO5S61i52DQeygZfjmZAWk3AtMB0cZl9I1qeVE4qrwcOMZP5WeWrIHTFl5SOaJBRZHNwsP0SDN7iEZbOng-I7-Hkymzc4b7ky6LB9NgzjVfU8ds8DaOU4PhQxNYEX-wvs67MdL_Q5MWr6FP5DGzCbiVwQ5o3fyKihBxbTuWdIC6PKX-Hf8t9w3-tswI1pJUGgza6DZWeibzj1HnloYgASoJdXMtZWFzdC0yMJoO.m3u8";
-        const server2 = "https://tgs1.myluck1.top:8088/mobile/stream8_240p/playlist.m3u8?vidictid=204717487331&id=30&pk=1d5d3161849fbcbe6b73fa72dc8fc8c345c433c42cbc509a51e104ecdbdcdc8ccdac055c362ab7b7db3ff0c3d7a69b8a7647879e8f5b8db41765a4695a889817"; 
+        const server2 = "https://jan.player0003.com/hls/star3in.m3u8?md6=PiUjN3HHi1Cq5ZIgU5AwHg&expires=1768726424&s=MjEyLjEwMi41MS4yNDM="; 
         const server3 = "Link_3";
 
         let currentUrl = server1;
