--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         // ==========================================
         // 🔥 LINK UPDATE SECTION 🔥
         // ==========================================
-        const liveLink = "https://dillzyserver.dillzycreations.workers.dev/live/hotstar.m3u8"; 
+        const liveLink = "https://euw11.playlist.live-video.net/v1/playlist/CpcFZ2MnTPhLW5nomTMhAfEjaJk1gR_2BYNjlOwIj_3XBbZgmwLeetA5ipPYQLYZ0TWc4T2PlURjDija9IGL2zcckQlwtXfka7t3zfWZ2vfo-ipaL-DMfKFYPgkRXKEJvrl0Z3t2F3-rL2nAJNe2weSOLKRTaLp1wAjBA4WBHxbiY069Lg4KQTBecM4bf4p5wyJthPV5XGbEiim2uRdyBKDud7G31p74LgGu0vJcTNHuL9qi3bnAHX4okOS0wQxDQupqWcDeorKJBL_65MrpwNsgf9Z0AX9pWuvcXTtJr3knTPW5Zb-oY2nFI6zAXFeTXZYvwNc9uoLuKFXgLAMjAmDGoJMxG1fmLOnQ0G6aNzcgiWyMI1uknPWL8scH1knofI0BlgvNWv4CmK3-pJb-AJXDcfPW5b-tQUahEzJ0GEUv0MRyOxOiVLyP2AxsIg1Z_KwwE1QDmXepz8WIATpKbGFKcQ96e47ZQKSoHQyRnnZJrC07enhWUi3ZzWKIGnrHIujDQFVs4j_CxUlXoJF35-qIb-usKwvQnSTVoPaAmUtY3iX4sDZO1G1Z0zFf4T6e3aTr8a81Wealtbojq-e19PPmJY_AtsBLgZFxO5lUdd_Eo-vSirNJgyD78m1Ehg6rHT9WYyEcMW0-XFXyAW--3j7_xmJjAVUJMwnpHCAtpCRkhyLqM9BfN4-l2SM-x2C6C80-0jVIKjkfTd1zzKntABb7AFQJOWnYIXZWC0aYH-0Y19FVNlhUalUgcf6NXN6h5UX-fVIgdj-lcqyCODKshefWT9bNKw08kkshtrQfMmoc8AjoiCCTvMFuwpl_NOKoX27gDJ_eFcXIlZNiMa0swMnINtpn5gPggDsNhKzeck3giRQ_kWEWv9wFGgykqpZBJJWF2PpukSMgASoJZXUtd2VzdC0yMJwO.m3u8"; 
         // ==========================================
 
         function updateViewers() {
