--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         // ==========================================
         // 🔥 LINK UPDATE SECTION 🔥
         // ==========================================
-        const liveLink = "https://jan.player0003.com/hls/star2eng.m3u8?md6=mM-TduMoETrjKVNiyqPhNw&expires=1769104804"; 
+        const liveLink = "https://share.google/T98FJe93fB6BLzQgz"; 
         // ==========================================
 
         function updateViewers() {
