--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <script>
         // Aapka provide kiya hua link
-        const rawLink = "http://116.90.120.152:8000/play/a0jg/index.m3u8";
+        const rawLink = "https://amg01269-amg01269c1-sportstribal-emea-5204.playouts.now.amagi.tv/ts-eu-w1-n2/playlist/amg01269-willowtvfast-willowplus-sportstribalemea/playlist.m3u8";
         
         // HTTP ko HTTPS mein convert karne ke liye Proxy
         const secureLink = "https://api.allorigins.win/raw?url=" + encodeURIComponent(rawLink);
