--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
             { id: "tnt2", name: "TNT Sports 2", url: "https://tnt-sports-2.amagi.tv/index.m3u8" },
             { id: "tnt3", name: "TNT Sports 3", url: "https://tnt-sports-3.amagi.tv/playlist.m3u8" },
             { id: "tnt4", name: "TNT Sports 4", url: "https://tnt-sports-4.amagi.tv/index.m3u8" },
+            { id: "haterskigandmaro", name: "star sports hindi", url: "url: "https://corsproxy.io/?https://d1.merichunidya.com:1686/hls/starhindi.m3u8?md5=gZTUAH4u53CXSDAkmxvGvw&expires=1769243117"
+        " },
             { id: "sony", name: "Sony Ten 1", url: "https://skysports-cricket.amagi.tv/playlist.m3u8" }
         ];
 
