--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         const channels = [
             { id: "willow", name: "Willow HD", url: "https://amg01269-amg01269c1-sportstribal-emea-5204.playouts.now.amagi.tv/ts-eu-w1-n2/playlist/amg01269-willowtvfast-willowplus-sportstribalemea/playlist.m3u8" },
             { id: "sky", name: "Sky Cricket", url: "https://d3.merichunidya.com:1686/hls/skyscric.m3u8?md5=kHbfVfVtKKqVWMPwLY8DBg&expires=1769241381" },
-            { id: "bhikaripkmkb", name: "Cricbuzz 2", url: "https://crickettv.site/cricbuzz1" }
+            { id: "haterskigandmaro", name: "Cricbuzz 2", url: "https://crickettv.site/cricbuzz1" }
         ];
 
         let hls = null;
