--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <script type='text/javascript' src='//pl28610287.effectivegatecpm.com/0a/f6/97/0af6976a131afc828a7e5bb535fbe305.js'></script>
-
-    <script src="https://pl28610431.effectivegatecpm.com/ff/e8/77/ffe877c5a9204d730c6d295f287d33e3.js"></script>
-
+    <script src="https://exterminatorfalter.com/0a/f6/97/0af6976a131afc828a7e5bb535fbe305.js"></script>
     <style>
         /* --- PREMIUM DARK THEME --- */
         :root {
@@ -300,5 +297,7 @@
 
         init();
     </script>
-</body>
+    
+    <script src="https://exterminatorfalter.com/ff/e8/77/ffe877c5a9204d730c6d295f287d33e3.js"></script>
+    </body>
 </html>
