--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             { id: "ytlive", name: "YouTube Live", url: "https://www.youtube.com/embed/VIDEO_ID_HERE" },
 
             // 5. NEW: SERVER 4 (IFRAME) (Yahan apna Iframe link dalo)
-            { id: "server4", name: "Server 4 (VIP)", url: "https://dlhd.link/stream/stream-598.php" width="100%" height="100%" style="border:0;" allowfullscreen></iframe>" }
+            { id: "server4", name: "Server 4 (VIP)", url: "https://dlhd.link/stream/stream-598.php" }
         ];
 
         let hls = null;
