--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             { id: "willow", name: "Willow HD", url: "https://amg01269-amg01269c1-sportstribal-emea-5204.playouts.now.amagi.tv/ts-eu-w1-n2/playlist/amg01269-willowtvfast-willowplus-sportstribalemea/playlist.m3u8" },
             
             // 2. Existing Sky
-            { id: "sky", name: "Sky Cricket", url: "https://451nj1za7g9v2kexgxatdrh.linux-developers.top/cpannel/logs/C/p2/WWE_Royal_Rumble_2026_SDv2/logs.m3u8?md5=tIEDNzdz-rK1SacsfH9uPg&expires=1769968741" },
+            { id: "sky", name: "Sky Cricket", url: "https://cdn5.wwe.com/wwe/2026/shotgunsatnight06_hhhtaker_full_rev/shotgunsatnight06_hhhtaker_full_rev_960x540.m3u8" },
             
             // 3. Existing Iframe
             { id: "haterskigandmaro", name: "Tera Baap Hu", url: "https://mksplay.pages.dev/mkid?id=t20wc" },
