Update iframe entry for MKS Sports

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             { id: "workerstream", name: "MKS Sports (Worker)", url: "https://livepush.io/hls-player/index.html?url=https://Mysterypub.tonystarc544.workers.dev/inde.m3u8&embed=true" },
             
             // 3. Existing Iframe
-            { id: "haterskigandmaro", name: "Tera Baap Hu", url: "https://mksplay.pages.dev/mkid?id=t20wc" },
+            { id: "jokerbrand", name: "MKS sports", url: "https://mks-live.pages.dev/mkstar?channel_id=4456" },
 
             // 4. YouTube Embed (Sample)
             { id: "ytlive", name: "YouTube Live", url: "https://www.youtube.com/embed/jfKfPfyJRdk" }
