Fix duplicate quote in Star Sports 1 Hindi entry

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             { id: "ytlive", name: "YouTube Live", url: "https://www.youtube.com/embed/jfKfPfyJRdk" },
             
             // 5. NEW STAR SPORTS 1 HINDI (ADDED)
-            { id: "HINDI"", name: "Star Sports 1 Hindi", url: "https://mks-live.pages.dev/mkstar?channel_id=174"}
+            { id: "HINDI", name: "Star Sports 1 Hindi", url: "https://mks-live.pages.dev/mkstar?channel_id=174"}
         ];
 
         let hls = null;
