Update MKS sports URL in index.html

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             { id: "u19wcfinal", name: "MKS Sports (Worker)", url: "https://mksplay.pages.dev/mkid?id=u19" },
             
             // 3. Existing Iframe
-            { id: "jokerbrand", name: "MKS sports", url: "https://mks-live.pages.dev/mkstar?channel_id=4456" },
+            { id: "jokerbrand", name: "MKS sports", url: "https://mksplay.pages.dev/mkid?id=t20wc" },
 
             // 4. YouTube Embed (Sample)
             { id: "ytlive", name: "YouTube Live", url: "https://www.youtube.com/embed/jfKfPfyJRdk" },
