Update news ticker message for accuracy

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <div class="news-ticker-box">
         <div class="ticker-content">
-            🚀 JOIN TELEGRAM FOR TOSS, SESSION & MATCH WINNER REPORT! 🏆 FREE FANTASY TEAMS AVAILABLE! ⚡ CLICK JOIN NOW! 🚀 &nbsp;&nbsp;&nbsp;&nbsp; 🔴 WATCH LIVE MATCH HD FREE! 🔴
+            🚀 JOIN TELEGRAM FOR TOSS, SESSION & MATCH WINNER REPORT! 🏆100% ACCURATE MATCH PREDICTION! ⚡ CLICK JOIN NOW! 🚀 &nbsp;&nbsp;&nbsp;&nbsp; 🔴 WATCH LIVE MATCH HD FREE! 🔴
         </div>
     </div>
 
