--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <script>
         const channels = [
             { id: "willow", name: "Willow HD", url: "https://amg01269-amg01269c1-sportstribal-emea-5204.playouts.now.amagi.tv/ts-eu-w1-n2/playlist/amg01269-willowtvfast-willowplus-sportstribalemea/playlist.m3u8" },
-            { id: "u19wcfinal", name: "MKS Sports (Worker)", url: "https://mksplay.pages.dev/mkid?id=u19" },
+            { id: "indvsusa", name: "MKS Sports (Highlights)", url: "https://files.catbox.moe/5k36dt.mp4" },
             { id: "jokerbrand", name: "MKS sports", url: "https://mksplay.pages.dev/mkid?id=t20wc" },
             { id: "ytlive", name: "YouTube Live", url: "https://www.youtube.com/embed/vQ4B2PaniYs" },
             { id: "HINDI", name: "Star Sports 1 Hindi", url: "https://mks-live.pages.dev/mkstar?channel_id=174"}
