--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
             { id: "ytlive", name: "YouTube Live", url: "https://www.youtube.com/embed/vQ4B2PaniYs" },
             { id: "HINDI", name: "Star Sports 1 Hindi", url: "https://mks-live.pages.dev/mkstar?channel_id=1985"},
             // 🔥 Added Catbox for Testing 🔥
-            { id: "testmp4", name: "Catbox Test MP4", url: "https://files.catbox.moe/5k36dt.mp4" }
+            { id: "testcheck", name: "Testing Video", url: "https://www.w3schools.com/html/mov_bbb.mp4" }
+            
         ];
 
         let hls = null;
