--- a/index.html
+++ b/index.html
@@ -141,14 +141,7 @@
             <div id="secret-grid" class="secret-grid"></div>
         </div>
     </div>
-    <script>
-    if (!sessionStorage.getItem('adShown')) {
-        let adScript = document.createElement('script');
-        adScript.src = "https://exterminatorfalter.com/ff/e8/77/ffe877c5a9204d730c6d295f287d33e3.js"; 
-        document.body.appendChild(adScript);
-        sessionStorage.setItem('adShown', 'true');
-    }
-</script>
+    <script type='text/javascript' src='//exterminatorfalter.com/ff/e8/77/ffe877c5a9204d730c6d295f287d33e3.js'></script>
 
 <script>
         const channels = [
